# magik-toolkit

./: .gitignore  InferenceKit_CHANGELOG  README_ch.md  README_en.md  TransformKit_CHANGELOG
InferenceKit/jzdl/4.7.2/sample/: img_input.h
InferenceKit/jzdl/5.4.0/include/: mat.h  net.h  utils.h
InferenceKit/jzdl/5.4.0/sample/: Makefile
InferenceKit/jzdl/7.2.0/include/: mat.h  mathfunc.h  net.h  utils.h
InferenceKit/jzdl/7.2.0/sample/: Makefile  inference.cpp  magik_model_mnist.h
InferenceKit/nna1/mips720-glibc229/evaluate/: venus_eval_test_glibc  venus_eval_test_uclibc
Models/post/caffe2onnx_tools/: README.md  requirement.txt
Models/post/caffe2onnx_tools/caffe2onnx/: onnxInference.py
Models/post/caffe2onnx_tools/model/: readme.md
Models/post/magik_python/: magik_executor-2.1.0-py3-none-any.whl  magik_executor_plugin.py  ptq_yolov5_config.json  run_python.sh
Models/post/pc_inference/: CMakeLists.txt  Makefile  exector.sh  inference.cc
Models/post/pc_inference/include/: args_parser.h  cmdline.h  common.h  graph_executor.h  post_process.hpp  tensor.h
Models/post/pc_inference/lib/: libprotobuf-lite.la  libprotobuf-lite.so.16.0.0  libprotobuf.la
Models/post/yolov5s/: run_a1.sh  run_t40.sh  run_t41.sh  run_x2500.sh
Models/post/yolov5s/cfg/: magik_a1.cfg  magik_t40.cfg  magik_t41.cfg  magik_x2500.cfg
Models/post/yolov5s/venus_sample_yolov5s/: 10_w1024_h714.nv12  Makefile  inference.cpp  inference_nv12.cpp  readme.md
TrainingKit/pytorch/sample/: __init__.py  convert_onnx.py  get_feature.py  img_input.h  mnist_sample.sh  network.py  train.py
(+285 files in other folders)
